# DE2025

./: .gitignore  NOTE.md  README.md  w0.py
data/de-w0-starter/: .env.example  .gitignore  Makefile  README.md  pyproject.toml
data/de-w0-starter/data/: sales.csv
data/de-w0-starter/scripts/: w0_bash_exercises.sh
data/de-w0-starter/src/app/: demo.py
data/de-w0-starter/src/common/: logging_setup.py
de-w0-starter/: .env.example  Makefile  README.md
de-w0-starter/artifacts/: grep_counts.txt  status_top.txt
de-w0-starter/artifacts/w1/: agg_daily.csv  clean.csv
de-w0-starter/etl/: aggregate.py  clean_csv.py  join.py
de-w0-starter/src/app/: demo.py
de-w0-starter/src/common/: logging_setup.py
de-w0-starter/tests/: test_aggregate.py  test_clean_csv.py  test_clean_csv_empty_row.py  test_join.py
docs/progress/: W-0.md  Ｗ-1.md
docs/progress/templates/: week-card.md
